--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.Contain {
+  padding: 100px;
+}
+
 .NavBar-Link {
   color: grey;
   margin: 0 5%;
@@ -36,4 +40,9 @@
 }
 .NavBar-btn:hover {
   background-color: thistle;
+}
+
+.SmallBoxGame:hover img {
+  box-shadow: 0 0 1px 2px rgba(88, 144, 255, 0.75),
+    0 1px 1px rgba(0, 0, 0, 0.15);
 }
